[package]
name = "warpx-node"
version = "0.1.0"
description = "FRAME-based Substrate node"
license = "MIT-0"
build = "build.rs"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
publish = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "warpx-node"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = ["server"] }

polkadot-sdk = { workspace = true, features = [
    "experimental",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc",
    "node",
] }

# Local Dependencies
warpx-runtime = { workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = ["warpx-runtime/std", "polkadot-sdk/std"]
