[package]
name = "warpx-node"
version = "0.1.0"
description = "FRAME-based Substrate node"
license = "MIT-0"
build = "build.rs"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
publish = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "warpx-node"

[dependencies]
log = { workspace = true }
docify = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = ["server"] }
serde = { features = ["derive"], workspace = true, default-features = true }

polkadot-sdk = { workspace = true, features = [
    "experimental",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc",
    "node",
] }

sc-tracing = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }

# Local Dependencies
warpx-runtime = { workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = ["log/std", "warpx-runtime/std", "polkadot-sdk/std"]
