[package]
name = "warpx-runtime"
version = "0.1.0"
description = "warp(x) = x`"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
smallvec = { workspace = true, default-features = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

polkadot-sdk = { workspace = true, features = [
    "experimental",
    "pallet-assets",
    "pallet-aura",
    "pallet-balances",
    "pallet-grandpa",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",

    "pallet-xcm",
    "polkadot-parachain-primitives",
    "polkadot-runtime-common",
    "staging-xcm",
    "staging-xcm-builder",
    "staging-xcm-executor",

    "cumulus-pallet-aura-ext",
    "cumulus-pallet-session-benchmarking",
    "cumulus-pallet-xcm",
    "cumulus-pallet-xcmp-queue",
    "cumulus-primitives-aura",
    "cumulus-primitives-core",
    "cumulus-primitives-storage-weight-reclaim",
    "cumulus-primitives-utility",
    "pallet-collator-selection",
    "parachains-common",
    "staging-parachain-info",

    "runtime",
] }

# Local
pallet-hybrid-orderbook = { workspace = true }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
    "substrate-wasm-builder",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
    "pallet-hybrid-orderbook/std",
]
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]
