[package]
name = "warpx-authorship"
description = "warp(x) preconf authorship implementation"
version = "0.1.0"
license = "Unlicense"
edition.workspace = true
authors.workspace = true

[dependencies]

warpx-client-primitives = { workspace = true, default-features = true }

cumulus-client-consensus-proposer = { workspace = true, default-features = true }
cumulus-primitives-parachain-inherent = { workspace = true, default-features = true }

async-trait = { workspace = true }
anyhow = { workspace = true }
codec = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

prometheus-endpoint = { workspace = true, default-features = true }
sc-block-builder = { workspace = true, default-features = true }
sc-basic-authorship = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-proposer-metrics = { workspace = true, default-features = true }

sp-api = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }