[package]
name = "pallet-hybrid-orderbook"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
description = "FRAME hybrid orderbook"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# External crates
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# PolkadotSDK
polkadot-sdk = { workspace = true, features = [
    "experimental",
    "pallet-assets",
    "pallet-balances",
    "runtime",
] }

# FRAMEs
frame = { workspace = true, features = ["experimental", "runtime"] }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "polkadot-sdk/std",
    "frame/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "frame/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime", "frame/try-runtime"]
