[package]
name = "pallet-hybrid-orderbook"
description = "FRAME hybrid orderbook"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# external crates
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
log = { workspace = true }

# primitive crates
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }

# FRAMES
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-assets = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-assets-freezer = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking?/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
