[package]
name = "pallet-shielded-pool"
version = "0.1.0"
edition = "2021"

[dependencies]

# external crates
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
log = { workspace = true }

# ZKVM
risc0-zkvm = { workspace = true }

# FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "risc0-zkvm/std",
] 