[package]
name = "pallet-shielded-pool"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
description = "FRAME shielded pool"
readme = "README.md"

[dependencies]

# external crates
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde_json = { workspace = true }

# verifier
# risc0-verifier = { workspace = true }

# FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde_json/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]